@@ -5,10 +5,6 @@
  * The area of the page that contains both current comments
  * and the comment form.
  *
- * @subpackage AyaFreelance
- * @author ayatemplates
- * @since AyaFreelance 1.0.0
- *
  */
  
 if ( post_password_required() ) {
@@ -22,11 +18,11 @@ if ( post_password_required() ) {
 				$comments_number = get_comments_number();
 				if ( '1' === $comments_number ) {
 					/* translators: %s: post title */
-					printf( esc_html( 'One Reply to &ldquo;%s&rdquo;', 'comments title', 'ayafreelance' ), get_the_title() );
+					printf( _x( 'One Reply to &ldquo;%s&rdquo;', 'comments title', 'ayafreelance' ), get_the_title() );
 				} else {
 					printf(
 						/* translators: 1: number of comments, 2: post title */
-						esc_html(
+						_nx(
 							'%1$s Reply to &ldquo;%2$s&rdquo;',
 							'%1$s Replies to &ldquo;%2$s&rdquo;',
 							$comments_number,
@@ -66,7 +62,7 @@ if ( post_password_required() ) {
 		// If comments are closed and there are comments, let's leave a little note, shall we?
 		if ( ! comments_open() && get_comments_number() && post_type_supports( get_post_type(), 'comments' ) ) :
 	?>
-		<p class="no-comments"><?php esc_htmlesc_html_e( 'Comments are closed.', 'ayafreelance' ); ?></p>
+		<p class="no-comments"><?php esc_html_e( 'Comments are closed.', 'ayafreelance' ); ?></p>
 	<?php endif; ?>
 
 	<?php comment_form(); ?>
