@@ -2,10 +2,6 @@
 /**
  * The template for displaying all single posts and attachments
  *
- * @subpackage AyaFreelance
- * @author ayatemplates
- * @since AyaFreelance 1.0.0
- *
  */
 
  get_header(); ?>
@@ -21,7 +17,7 @@
 				/*
 				 * includes a post format-specific template for single content
 				 */
-				get_template_part( 'template-parts/content', get_post_format() );
+				get_template_part( 'template-parts/content' );
 				
 				// if comments are open or there's at least one comment, load up the comment template.
 				if ( comments_open() || get_comments_number() ) {
