@@ -4,7 +4,7 @@ Description: AyaFreelance is fully Responsive Blogging WordPress Theme. Features
 Theme URI: https://ayatemplates.com/product/ayafreelance
 Author: ayatemplates
 Author URI: https://ayatemplates.com
-Version: 1.0.0
+Version: 1.0.1
 Text Domain: ayafreelance
 Tags: blog, entertainment, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
 License: GNU General Public License v2.0
